trunk/Archive2/29/b3f8a1da5ca825/output
main.cpp: In function 'int main()':
main.cpp:4:13: error: 'over' was not declared in this scope
     int f = over 9000;
             ^
main.cpp:3:9: warning: unused variable 'g' [-Wunused-variable]
     int g = 5;
         ^
main.cpp:4:9: warning: unused variable 'f' [-Wunused-variable]
     int f = over 9000;
         ^
