trunk/Archive2/29/b3f8a1da5ca825/main.cpp
int main()
{
    int g = 5;
    int f = over 9000;
}
